# Paint-War-Project-OpenGL

./: .gitignore  README.md
Projet/: CMakeLists.txt
Projet/shaders/: blob_fs.glsl  blob_physics_cs.glsl  blob_speed_cs.glsl  blob_vs.glsl  environment_fs.glsl  environment_vs.glsl  infos_fs.glsl  infos_vs.glsl  map_fs.glsl  map_paint_cs.glsl  map_vs.glsl  score_cs.glsl
Projet/src/: buffer_structures.hpp  game.cpp  game.hpp  main.cpp  player.cpp  player.hpp
Projet/src/helpers/: camera_helper.cpp  camera_helper.hpp  context_helper.cpp  texture_helper.cpp  texture_helper.hpp
